feat: Pantheon client portal transformation + Partners enhancements
Client Portal (/c/[code]):
- Dark theme with amber Maven Partners branding
- Enhanced insights page with rich cards, filters, acknowledge
- Contact page with call/email/schedule, message form
- Layout updates for premium feel

Partners Dashboard:
- Added RiskGauge and Sparkline components
- Enhanced client detail with metrics
- Improved settings and insights pages

Build: passes ✓

--- a/memory/qa/2026-02-10.md
+++ b/memory/qa/2026-02-10.md
@@ -100,3 +100,17 @@
 **Partners Portal:** New routes deployed and healthy
 
 No issues found.
+
+## Auto-QA Sweep — 20:00 EST
+
+| Route | Status |
+|-------|--------|
+| / | ✅ 200 |
+| /demo | ✅ 200 |
+| /dashboard | ✅ 200 |
+| /portfolio-lab | ✅ 200 |
+| /pitch | ✅ 200 |
+| /partners | ✅ 200 |
+| /c/DEMO-JS123 | ✅ 200 |
+
+**Result:** ALL PASS
