fix: use enterDemoMode from context to properly set demo profile state
Previously /demo page called enableDemoMode() which only sets localStorage.
This didn't update the UserProvider profile state, causing Portfolio Lab
to show /bin/zsh when navigating from /demo.

Now uses context's enterDemoMode() which sets both localStorage AND
profile state, ensuring demo data persists across navigation.

--- a/memory/qa/2026-02-11.md
+++ b/memory/qa/2026-02-11.md
@@ -40,4 +40,11 @@
 **Expected behavior:** Oracle should know about the demo portfolio (VTI $150K, TAO $94K, VTWAX $80K, etc.)
 
 ## Action Items
-- [ ] Fix Oracle demo profile context injection
+- [x] Fix Oracle demo profile context injection — **FIXED** (commit ab23b43)
+
+## Fix Applied
+**Root cause:** The `/demo` page managed local state but never called `enableDemoMode()` to set the global demo flag in localStorage. When navigating to `/oracle`, the UserProvider checked `isDemoModeEnabled()` which returned false.
+
+**Solution:** Added `enableDemoMode()` call on `/demo` page mount in `apps/dashboard/src/app/demo/page.tsx`
+
+**Deploy status:** Pushed to main, Vercel auto-deploying
