fix: Set demo profile immediately on mount
The UserProvider was setting isDemoMode=true on mount but NOT setting
the profile until Clerk finished loading. This caused a race condition
where Oracle would render with null profile (showing $0) while waiting
for Clerk.

Now if demo mode is enabled in localStorage, we immediately set the
demo profile AND mark loading as complete, bypassing the Clerk wait.

--- a/memory/qa/2026-02-11.md
+++ b/memory/qa/2026-02-11.md
@@ -1,50 +1,77 @@
-# QA Report — 2026-02-11
+# QA Log - 2026-02-11
 
-## Routes Check (6:50 AM)
-| Route | Status |
-|-------|--------|
-| / | 200 ✓ |
-| /demo | 200 ✓ |
-| /dashboard | 200 ✓ |
-| /portfolio-lab | 200 ✓ |
-| /pitch | 200 ✓ |
+## Pantheon 4.1 QA Sweep (07:45-08:00 EST)
 
-## Browser Verification
+### Summary
+Full browser verification of Maven production. **Major new features deployed and verified.**
 
-### Demo Dashboard ✅
-- Net Worth: $658,025.35 (live)
-- Holdings: 9 total (VTI, TAO, VTWAX, BND, VXUS + 4 more)
-- Allocation: US 49%, Int'l 18%, Bonds 10%, Other 23%
-- Insights: Tax-loss harvest (VWO $2,500 loss), Portfolio drift 8%, Retirement 18% funded
-- Markets: Live data showing (SPY, QQQ, DIA, IWM, BTC, TAO)
-- Goals: Retirement 18%, Beach House 21%, Banks College 14%
+### Results
 
-### Oracle ⚠️ BUG FOUND
-- Modal opens correctly ✓
-- Oracle responds to questions ✓
-- **BUG:** Oracle shows $0 net worth, "0 linked accounts", "0 holdings tracked"
-- When asked about portfolio allocation, Oracle says "you don't have any holdings recorded yet"
-- **Expected:** Oracle should use demo profile context (same as dashboard)
+| Route | Status | Notes |
+|-------|--------|-------|
+| `/` (Landing) | ✅ | Live market data, CTAs working |
+| `/demo` | ✅ | $658K portfolio, 9 holdings, insights |
+| `/oracle` | ❌ **BUG** | Shows $0 net worth in demo mode |
+| `/dashboard` | ✅ | Working (different profile than demo) |
+| `/partners` | ✅ | All metrics: $12.4M AUM, 47 clients |
+| `/partners/clients/1` | ✅ | Robert Chen detail page loads |
+| `/c/DEMO-JS123` | ✅ | **ALL NEW FEATURES WORKING** |
+| `/c/DEMO-JS123/explore` | ✅ | **NEW - Full verification below** |
 
-## Bug Details
+### New Features Verified
 
-**Issue:** Oracle not loading demo profile data
-**Severity:** Medium-High (core feature doesn't work in demo mode)
-**Steps to reproduce:**
-1. Go to mavenwealth.ai/demo
-2. Click Oracle button
-3. See "Net Worth: $0" in sidebar
-4. Ask "What's my portfolio allocation?"
-5. Oracle responds saying no holdings
+#### Client Portal Home (Enhanced)
+- ✅ Dynamic status message computed from goals ("You're ahead of schedule")
+- ✅ "From Your Advisor" personal note section (Sarah Chen)
+- ✅ "What we did this month" advisor actions:
+  - Rebalanced portfolio (Feb 4)
+  - Harvested $1,200 tax loss (~$300 savings) (Jan 27)
+  - Reinvested $1,842 dividends (Jan 31)
+- ✅ Market context section ("S&P 500 dipped 1.2%...")
+- ✅ Projected trajectory on goals:
+  - Retirement: "On track to exceed by $150,000"
+  - College: "Consider increasing contributions"
 
-**Expected behavior:** Oracle should know about the demo portfolio (VTI $150K, TAO $94K, VTWAX $80K, etc.)
+#### Explore Investments (NEW)
+- ✅ Search works (tested AAPL)
+- ✅ Shows stocks, ETFs, options, crypto
+- ✅ Investment detail card ($225, +0.81%)
+- ✅ Portfolio impact analysis ("If you invested $10,000...")
+- ✅ Concentration risk indicator
+- ✅ "Ask Maven" button
+- ✅ "Discuss with Advisor" modal with message input
 
-## Action Items
-- [x] Fix Oracle demo profile context injection — **FIXED** (commit ab23b43)
+### Bugs Found
 
-## Fix Applied
-**Root cause:** The `/demo` page managed local state but never called `enableDemoMode()` to set the global demo flag in localStorage. When navigating to `/oracle`, the UserProvider checked `isDemoModeEnabled()` which returned false.
+#### Oracle Demo Mode Bug (P1)
+**Symptom:** Oracle shows $0 net worth, 0 accounts, 0 holdings even when accessing from /demo page.
 
-**Solution:** Added `enableDemoMode()` call on `/demo` page mount in `apps/dashboard/src/app/demo/page.tsx`
+**Impact:** Users in demo mode can't use Oracle effectively.
 
-**Deploy status:** Pushed to main, Vercel auto-deploying
+**Root Cause Investigation:**
+- Fix commits exist (ab23b43, 5528719)
+- `enterDemoMode()` from context IS being called on /demo page
+- UserProvider's `loadProfile()` checks `isDemoModeEnabled()` first
+- Yet Oracle still shows $0
+
+**Hypothesis:** Chat history cached in localStorage. Old conversation persists showing $0 from before demo mode was enabled.
+
+**Next Steps:**
+1. Clear Oracle chat history on demo mode entry
+2. OR: Add "New Chat" button to Oracle
+3. OR: Check if MavenChat is checking isDemoMode correctly
+
+### Build Issues
+
+- GitHub Actions shows "failure" for recent commits
+- Vercel deploys successfully (separate from GH Actions)
+- Fixed build issue: Added `explore` to SECTION_PATH_MAP in useClientPortalSettings.ts (c3a1680)
+
+### Commits Today
+- `c3a1680` - fix: Add explore to SECTION_PATH_MAP in useClientPortalSettings hook
+- `6849c7a` - feat: Enhanced client portal + advisor research visibility
+- `c32f3d7` - feat: Explore Investments page
+
+---
+
+**Next QA:** Verify Oracle fix once implemented
