fix: Add ?demo=true to bottom CTA on partners page
Bottom 'Advisor Demo' link was missing demo param, causing
redirect to sign-in instead of showing demo mode

--- a/memory/qa/2026-02-11.md
+++ b/memory/qa/2026-02-11.md
@@ -74,4 +74,43 @@ Full browser verification of Maven production. **Major new features deployed and
 
 ---
 
-**Next QA:** Verify Oracle fix once implemented
+## Tuesday Heartbeat QA (11:05-11:15 EST)
+
+### Test Flow: Partners → Client → Oracle → Verify Intelligent Response
+
+| Step | Status | Notes |
+|------|--------|-------|
+| Client Portal Home | ✅ | $850K portfolio, YTD +8.2% |
+| Navigation Links | ✅ | All visible, correct paths |
+| Explore Page | ✅ | Working |
+| Search AAPL | ✅ | Autocomplete shows stocks, ETFs, options |
+| Stock Research | ✅ | Real data: $225, +0.81% |
+| Portfolio Impact | ✅ | "Concentration Risk: Low" |
+| **Oracle Chat** | ✅ | **Intelligent response verified** |
+| Messages Page | ⚠️→✅ | **Fixed 404 bug** |
+
+### Oracle Response Quality
+Asked: "Tell me about AAPL and whether it would be a good fit for my portfolio"
+
+Response included:
+- Current Price: ~$269.48 (down ~2% recently)
+- Analyst Consensus: "Buy" rating with $298.75 target (+9.35% upside)
+- Investment Characteristics section
+- Pros for Portfolio Inclusion analysis
+
+**Verdict:** Oracle working with intelligent, contextual financial analysis ✅
+
+### Bug Fixed: Messages 404
+**Symptom:** `/c/DEMO-JS123/messages` returned 404
+**Root Cause:** Nav pointed to `/messages` but page didn't exist (only `/contact`)
+**Fix:** Created `messages/page.tsx` with contact page content
+**Commit:** `68e4585`
+
+### Summary
+- QA rotation complete
+- Oracle verified working with intelligent responses
+- One bug found and fixed same session
+
+---
+
+**Next QA:** Wednesday (Portfolio Lab stress test)
