fix: Update stale fallback prices + add dynamic caching
CRITICAL FIX: Fallback prices were 3+ months stale
- SPY was  (actual: ) - 14% off!
- QQQ was  (actual: ) - 16% off!

Changes:
1. Updated all fallback prices to Feb 11, 2026 values
2. Added in-memory caching of last known good prices
3. Cache survives for 1 hour before falling back to static
4. Better error logging with source tracking
5. Never return error - always return data (live/cached/fallback)

This is why market data kept showing wrong values - any API
hiccup would show ancient prices instead of recent ones.

--- a/memory/qa/2026-02-11.md
+++ b/memory/qa/2026-02-11.md
@@ -113,4 +113,31 @@ Response included:
 
 ---
 
+## Auto-QA Sweep (12:00 EST)
+
+All routes healthy ✅
+
+| Route | Status |
+|-------|--------|
+| `/` | 200 |
+| `/demo` | 200 |
+| `/dashboard` | 200 |
+| `/portfolio-lab` | 200 |
+| `/pitch` | 200 |
+| `/partners` | 200 |
+| `/partners/dashboard?demo=true` | 200 |
+| `/c/DEMO-JS123` | 200 |
+| `/c/DEMO-JS123/estate` | 200 |
+| `/c/DEMO-JS123/tax` | 200 |
+| `/c/DEMO-JS123/social-security` | 200 |
+| `/c/DEMO-JS123/philanthropy` | 200 |
+| `/c/DEMO-JS123/messages` | 200 |
+| `/c/DEMO-JS123/explore` | 200 |
+| `/partners/activity?demo=true` | 200 |
+| `/partners/clients/new?demo=true` | 200 |
+
+All new pages from morning bug fixes confirmed live.
+
+---
+
 **Next QA:** Wednesday (Portfolio Lab stress test)
