fix: remove shortName from market-data response (type mismatch)

--- a/memory/2026-02-11.md
+++ b/memory/2026-02-11.md
@@ -131,4 +131,31 @@ Updated QA-CHECKLIST.md with today's bug patterns.
 
 ---
 
-*5 bugs caught by Sam, 5 bugs fixed. Target remains 0.*
+## Redis Setup (Late Night)
+
+**Mission:** Set up persistent caching for Athena and market data.
+
+**Completed via OpenClaw Browser Control:**
+1. Navigated to Vercel Storage → Redis marketplace
+2. Created free-tier Redis database: `redis-teal-village` (30MB)
+3. Connected to `dashboard` project (all environments: Dev, Preview, Prod)
+4. Region: Washington, D.C. (iad1) — close to users
+
+**Code Changes:**
+- Updated `cache.ts` to support both Upstash and standard Redis
+- Checks `REDIS_URL` or `STORAGE_URL` env vars
+- Falls back gracefully to in-memory when not configured
+- Added `redis` npm package for TCP connections
+- Updated health endpoint to report `upstash`/`redis`/`memory` types
+
+**Commit:** `8475c90`
+
+**Why This Matters:**
+- In-memory cache lost on cold starts (serverless problem)
+- Market data freshness is critical (L016 learning)
+- Athena needs persistent query routing cache
+- Health endpoint can now properly monitor cache status
+
+---
+
+*5 bugs caught by Sam, 5 bugs fixed. Redis infrastructure added. Target remains 0.*
