feat(athena): Add Chutes decentralized LLM provider
- Add Chutes provider with OpenAI-compatible API client
- Support for DeepSeek, Qwen, Mistral models via Bittensor
- Model presets: cheap, balanced, quality, reasoning
- Portfolio analysis helper for bulk queries
- Batch processing with configurable concurrency
- Cost tracking per query
- API test endpoint at /api/athena/test
- 85-95% cheaper than GPT-4 for bulk analysis

Next: Add CHUTES_API_KEY to Vercel env vars

--- a/memory/2026-02-11.md
+++ b/memory/2026-02-11.md
@@ -158,4 +158,40 @@ Updated QA-CHECKLIST.md with today's bug patterns.
 
 ---
 
-*5 bugs caught by Sam, 5 bugs fixed. Redis infrastructure added. Target remains 0.*
+## Build Failures (Late Night)
+
+**Status:** 7 consecutive Vercel build failures blocking deployment.
+
+**Production stuck on:** commit `44d961c` "fix: Add ALL missing advisor routes" (5+ hours old)
+
+**Failed commits not yet deployed:**
+- `35f156f` — Type fix (removed `shortName` from market-data response)
+- `8475c90` — Redis integration
+
+**L016 Bug (Stale Data):**
+Sam caught stale market data again. Added proper data freshness checks:
+- Data MUST be <1 hour old
+- Updated `/api/market-data` with live/cached timestamps
+- Updated fallback prices to current values
+- Health endpoint now monitors freshness
+
+**Market Data Label Fix:**
+Changed "S&P 500" → "SPY" — showing actual ticker, not the index name, when displaying ETF price data.
+
+**Athena Phase 1 Complete:**
+~3,400 lines of core infrastructure:
+- `synthesis.ts` — Signal normalization + weighted consensus
+- `types.ts` — Full type system for hybrid AI
+- `router.ts` — Query classification + provider routing
+- `config.ts` — Provider costs, capabilities, weights
+- Mock providers + test suite
+
+**Next Session Priority:**
+1. Check Vercel build logs to identify failure cause
+2. Fix build errors
+3. Verify Redis connection works in production
+4. Continue Athena Phase 2 (Chutes integration)
+
+---
+
+*6 bugs caught by Sam, 6 bugs fixed. Redis + Athena Phase 1 infrastructure added. Build failures blocking deploy. Target remains 0.*
