feat: Strip <think> reasoning traces from Chutes responses
DeepSeek R1 and other reasoning models wrap their thinking in
<think>...</think> blocks. This cleans them before showing to users.

Also enabled Athena in production:
- ATHENA_ENABLED=true
- ATHENA_AB_PERCENT=10 (10% of queries use Athena)

--- a/memory/qa/2026-02-11.md
+++ b/memory/qa/2026-02-11.md
@@ -1,167 +1,33 @@
-# QA Log - 2026-02-11
+# QA Log — 2026-02-11
 
-## Pantheon 4.1 QA Sweep (07:45-08:00 EST)
+## Heartbeat 6:46 PM ET
 
-### Summary
-Full browser verification of Maven production. **Major new features deployed and verified.**
+### Data Health Check
+- **Initial Status:** `degraded` — 45 minutes stale
+- **Root Cause:** Two bugs found
+  1. `Date.now() === Date.now()` condition never true (cache never updated)
+  2. Legacy ETF symbols (SPY, QQQ, etc.) had old timestamps in cache
+- **Fix Deployed:** Commits `fb49519` and `7f9dd42`
+- **Final Status:** `healthy` — 0 seconds age
 
-### Results
+### Wednesday QA Flow: Partners → Client → Oracle
+- **Partners Dashboard:** ✅ Loaded with AUM stats, client list, action items
+- **Client Page (Robert Chen):** ✅ Holdings, performance, research activity visible
+- **Oracle Chat:** ✅ Responded with intelligent, contextual advice
 
-| Route | Status | Notes |
-|-------|--------|-------|
-| `/` (Landing) | ✅ | Live market data, CTAs working |
-| `/demo` | ✅ | $658K portfolio, 9 holdings, insights |
-| `/oracle` | ❌ **BUG** | Shows $0 net worth in demo mode |
-| `/dashboard` | ✅ | Working (different profile than demo) |
-| `/partners` | ✅ | All metrics: $12.4M AUM, 47 clients |
-| `/partners/clients/1` | ✅ | Robert Chen detail page loads |
-| `/c/DEMO-JS123` | ✅ | **ALL NEW FEATURES WORKING** |
-| `/c/DEMO-JS123/explore` | ✅ | **NEW - Full verification below** |
+**Question Asked:** "Given Robert's AAPL and MSFT positions make up 22.5% of his portfolio as individual stocks, what specific risks should I discuss with him in our upcoming meeting?"
 
-### New Features Verified
+**Oracle Response Quality:** ✅ Excellent
+- Correctly identified concentration risk
+- Referenced actual portfolio data (AAPL +30.2% gain, VXUS -$3,000 loss)
+- Provided 4 specific action items for meeting
+- Suggested tax-efficient rebalancing strategy
+- Recommended 5-10% cap on individual positions
 
-#### Client Portal Home (Enhanced)
-- ✅ Dynamic status message computed from goals ("You're ahead of schedule")
-- ✅ "From Your Advisor" personal note section (Sarah Chen)
-- ✅ "What we did this month" advisor actions:
-  - Rebalanced portfolio (Feb 4)
-  - Harvested $1,200 tax loss (~$300 savings) (Jan 27)
-  - Reinvested $1,842 dividends (Jan 31)
-- ✅ Market context section ("S&P 500 dipped 1.2%...")
-- ✅ Projected trajectory on goals:
-  - Retirement: "On track to exceed by $150,000"
-  - College: "Consider increasing contributions"
+### Bugs Fixed This Heartbeat
+1. **L019:** Cache never updated due to impossible Date.now() equality check
+2. **L020:** Health check tracking stale legacy symbols
 
-#### Explore Investments (NEW)
-- ✅ Search works (tested AAPL)
-- ✅ Shows stocks, ETFs, options, crypto
-- ✅ Investment detail card ($225, +0.81%)
-- ✅ Portfolio impact analysis ("If you invested $10,000...")
-- ✅ Concentration risk indicator
-- ✅ "Ask Maven" button
-- ✅ "Discuss with Advisor" modal with message input
-
-### Bugs Found
-
-#### Oracle Demo Mode Bug (P1)
-**Symptom:** Oracle shows $0 net worth, 0 accounts, 0 holdings even when accessing from /demo page.
-
-**Impact:** Users in demo mode can't use Oracle effectively.
-
-**Root Cause Investigation:**
-- Fix commits exist (ab23b43, 5528719)
-- `enterDemoMode()` from context IS being called on /demo page
-- UserProvider's `loadProfile()` checks `isDemoModeEnabled()` first
-- Yet Oracle still shows $0
-
-**Hypothesis:** Chat history cached in localStorage. Old conversation persists showing $0 from before demo mode was enabled.
-
-**Next Steps:**
-1. Clear Oracle chat history on demo mode entry
-2. OR: Add "New Chat" button to Oracle
-3. OR: Check if MavenChat is checking isDemoMode correctly
-
-### Build Issues
-
-- GitHub Actions shows "failure" for recent commits
-- Vercel deploys successfully (separate from GH Actions)
-- Fixed build issue: Added `explore` to SECTION_PATH_MAP in useClientPortalSettings.ts (c3a1680)
-
-### Commits Today
-- `c3a1680` - fix: Add explore to SECTION_PATH_MAP in useClientPortalSettings hook
-- `6849c7a` - feat: Enhanced client portal + advisor research visibility
-- `c32f3d7` - feat: Explore Investments page
-
----
-
-## Tuesday Heartbeat QA (11:05-11:15 EST)
-
-### Test Flow: Partners → Client → Oracle → Verify Intelligent Response
-
-| Step | Status | Notes |
-|------|--------|-------|
-| Client Portal Home | ✅ | $850K portfolio, YTD +8.2% |
-| Navigation Links | ✅ | All visible, correct paths |
-| Explore Page | ✅ | Working |
-| Search AAPL | ✅ | Autocomplete shows stocks, ETFs, options |
-| Stock Research | ✅ | Real data: $225, +0.81% |
-| Portfolio Impact | ✅ | "Concentration Risk: Low" |
-| **Oracle Chat** | ✅ | **Intelligent response verified** |
-| Messages Page | ⚠️→✅ | **Fixed 404 bug** |
-
-### Oracle Response Quality
-Asked: "Tell me about AAPL and whether it would be a good fit for my portfolio"
-
-Response included:
-- Current Price: ~$269.48 (down ~2% recently)
-- Analyst Consensus: "Buy" rating with $298.75 target (+9.35% upside)
-- Investment Characteristics section
-- Pros for Portfolio Inclusion analysis
-
-**Verdict:** Oracle working with intelligent, contextual financial analysis ✅
-
-### Bug Fixed: Messages 404
-**Symptom:** `/c/DEMO-JS123/messages` returned 404
-**Root Cause:** Nav pointed to `/messages` but page didn't exist (only `/contact`)
-**Fix:** Created `messages/page.tsx` with contact page content
-**Commit:** `68e4585`
-
-### Summary
-- QA rotation complete
-- Oracle verified working with intelligent responses
-- One bug found and fixed same session
-
----
-
-## Auto-QA Sweep (12:00 EST)
-
-All routes healthy ✅
-
-| Route | Status |
-|-------|--------|
-| `/` | 200 |
-| `/demo` | 200 |
-| `/dashboard` | 200 |
-| `/portfolio-lab` | 200 |
-| `/pitch` | 200 |
-| `/partners` | 200 |
-| `/partners/dashboard?demo=true` | 200 |
-| `/c/DEMO-JS123` | 200 |
-| `/c/DEMO-JS123/estate` | 200 |
-| `/c/DEMO-JS123/tax` | 200 |
-| `/c/DEMO-JS123/social-security` | 200 |
-| `/c/DEMO-JS123/philanthropy` | 200 |
-| `/c/DEMO-JS123/messages` | 200 |
-| `/c/DEMO-JS123/explore` | 200 |
-| `/partners/activity?demo=true` | 200 |
-| `/partners/clients/new?demo=true` | 200 |
-
-All new pages from morning bug fixes confirmed live.
-
----
-
-**Next QA:** Wednesday (Portfolio Lab stress test)
-
----
-
-## QA Sweep — 4:00 PM EST
-
-**Routes (all 200):**
-- `/` ✅
-- `/demo` ✅
-- `/dashboard` ✅
-- `/portfolio-optimizer` ✅
-- `/portfolio-lab` ✅
-- `/partners` ✅
-- `/c/DEMO-JS123` ✅
-
-**Market Data:**
-- Source: Live ✅
-- SPY: $692.39 (current)
-- 4 stocks, 2 crypto
-
-**Health Endpoint:**
-- `/api/health` returning HTML (deployment in progress)
-- Will verify on next sweep once Vercel deploy completes
-
-**Status:** All green 🟢
+### New Learnings Documented
+- L019: Never use `timestamp === Date.now()` for freshness checks
+- L020: Health checks must only monitor actively-fetched symbols
